--- a/postcube.cz/src/html/components/contact.njk
+++ b/postcube.cz/src/html/components/contact.njk
@@ -46,29 +46,11 @@
         <a property="telephone" href="tel:+420739304189" class="info--number">+420 739 304 189</a>
         <a property="email" href="mailto:info@postcube.cz" class="info--email">info@postcube.cz</a>
         <div class="social-buttons">
-          <a href="/" title="PostCube on Facebook" rel="me" class="facebook">
-            <svg xmlns="http://www.w3.org/2000/svg" width="34.588" height="34.379" viewBox="0 0 34.588 34.379">
-              <defs>
-                <style>.a {
-                  fill: #fff;
-                }</style>
-              </defs>
-              <path class="a"
-                    d="M42.588,25.294a17.294,17.294,0,1,0-20,17.085V30.293H18.2v-5h4.393v-3.81c0-4.334,2.58-6.728,6.532-6.728A26.615,26.615,0,0,1,33,15.093v4.254H30.814A2.5,2.5,0,0,0,28,22.048v3.246h4.8l-.767,5H28V42.379A17.3,17.3,0,0,0,42.588,25.294Z"
-                    transform="translate(-8 -8)"/>
-            </svg>
+          <a href="https://www.facebook.com/PostCube-109144127987529" title="PostCube on Facebook" rel="me" class="facebook">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"><title>Facebook</title><path d="M19 0H5a5 5 0 00-5 5v14a5 5 0 005 5h14a5 5 0 005-5V5a5 5 0 00-5-5zm-3 7h-1.924C13.461 7 13 7.252 13 7.889V9h3l-.238 3H13v8h-3v-8H8V9h2V7.077C10 5.055 11.064 4 13.461 4H16v3z" fill="#fff"/></svg>
           </a>
-          <a href="/" title="PostCube on Instagram" rel="me" class="instagram">
-            <svg xmlns="http://www.w3.org/2000/svg" width="34.179" height="34.171" viewBox="0 0 34.179 34.171">
-              <defs>
-                <style>.a {
-                  fill: #fff;
-                }</style>
-              </defs>
-              <path class="a"
-                    d="M17.018,40.149a8.761,8.761,0,1,0,8.761,8.761A8.747,8.747,0,0,0,17.018,40.149Zm0,14.457a5.7,5.7,0,1,1,5.7-5.7,5.706,5.706,0,0,1-5.7,5.7ZM28.181,39.791a2.043,2.043,0,1,1-2.043-2.043A2.039,2.039,0,0,1,28.181,39.791Zm5.8,2.074c-.13-2.737-.755-5.162-2.76-7.16s-4.422-2.623-7.16-2.76c-2.821-.16-11.277-.16-14.1,0A10.165,10.165,0,0,0,2.805,34.7C.8,36.7.182,39.12.045,41.857c-.16,2.821-.16,11.277,0,14.1.13,2.737.755,5.162,2.76,7.16a10.192,10.192,0,0,0,7.16,2.76c2.821.16,11.277.16,14.1,0,2.737-.13,5.162-.755,7.16-2.76s2.623-4.422,2.76-7.16C34.144,53.135,34.144,44.686,33.984,41.865ZM30.339,58.983a5.767,5.767,0,0,1-3.248,3.248c-2.249.892-7.587.686-10.073.686s-7.831.2-10.073-.686A5.767,5.767,0,0,1,3.7,58.983c-.892-2.249-.686-7.587-.686-10.072s-.2-7.831.686-10.072A5.767,5.767,0,0,1,6.946,35.59c2.249-.892,7.587-.686,10.073-.686s7.831-.2,10.073.686a5.767,5.767,0,0,1,3.248,3.248c.892,2.249.686,7.587.686,10.072S31.231,56.741,30.339,58.983Z"
-                    transform="translate(0.075 -31.825)"/>
-            </svg>
+          <a href="https://www.instagram.com/post.cube/" title="PostCube on Instagram" rel="me" class="instagram">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"><title>Instagram</title><path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zM12 0C8.741 0 8.333.014 7.053.072 2.695.272.273 2.69.073 7.052.014 8.333 0 8.741 0 12c0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98C8.333 23.986 8.741 24 12 24c3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98C15.668.014 15.259 0 12 0zm0 5.838a6.162 6.162 0 100 12.324 6.162 6.162 0 000-12.324zM12 16a4 4 0 110-8 4 4 0 010 8zm6.406-11.845a1.44 1.44 0 100 2.881 1.44 1.44 0 000-2.881z" fill="#fff"/></svg>
           </a>
         </div>
       </div>
