PostCube / copy changes

--- a/postcube.cz/src/html/components/how-it-works.njk
+++ b/postcube.cz/src/html/components/how-it-works.njk
@@ -23,8 +23,7 @@
               transform="translate(-719.985 -3046.657)"/>
       </svg>
       <h3>Objednáte online</h3>
-      <p>V&nbsp;košíku na e-shopu zadáte číslo PostCube, vyberete dopravce a
-        zaplatíte.</p>
+      <p>Při doručení stačí poslat kurýrovi odkaz k otevření boxu.</p>
     </div>
     <div
       class="after-icon icon-section__content mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-3-desktop">
@@ -39,7 +38,7 @@
               transform="translate(-748.02 -2953.099)"/>
       </svg>
       <h3>Přijede kurýr</h3>
-      <p>Pomocí jednorázového kódu kurýr otevře box a bezpečně do něj vloží
+      <p>Pomocí jednorázového odkazu kurýr otevře box a bezpečně do něj vloží
         zásilku.</p>
     </div>
     <div
