--- a/postcube.cz/src/html/domacnosti/index.njk
+++ b/postcube.cz/src/html/domacnosti/index.njk
@@ -132,7 +132,7 @@
             fill="#1538E5"/>
         </svg>
         <h3>Úžasně jednoduché</h3>
-        <p>Při objednávce zboží stačí zadat číslo chytré poštovní schránky.
+        <p>Při objednávce zboží stačí zaslat odkaz k otevření kurýrovi. 
           Mobilní aplikace vás sama upozorní, že balík právě přišel.</p>
       </div>
       <div class="action-btn mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
