[postcube.cz] Simplified layout definition

--- a/postcube.cz/src/html/components/faq.njk
+++ b/postcube.cz/src/html/components/faq.njk
@@ -4,7 +4,7 @@
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
       <h2>Možná vás zajímá ještě něco více</h2>
     </div>
-    <div class="accordion mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+    <div class="accordion mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
       <div>
         <input type="checkbox" name="accordion__faq" id="faq2" class="faq--input">
         <label for="faq2" class="faq--label">Jaká je životnost poštovní schránky PostCube?</label>
@@ -47,7 +47,7 @@
         </div>
       </div>
     </div>
-    <div class="accordion mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+    <div class="accordion mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
       <div>
         <input type="checkbox" name="accordion__faq" id="faq5" class="faq--input">
         <label for="faq5" class="faq--label">Kde všude mohu PostCube umístit?</label>
