--- a/postcube.cz/src/html/components/how-it-works.njk
+++ b/postcube.cz/src/html/components/how-it-works.njk
@@ -11,7 +11,7 @@
       <h2>A takhle jednoduché to je</h2>
     </div>
     <div
-      class="after-icon icon-section__content mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-3-desktop">
+      class="after-icon icon-section__content mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop">
       <svg xmlns="http://www.w3.org/2000/svg" width="45.993" height="40.286" viewBox="0 0 45.993 40.286">
         <defs>
           <style>.a {
@@ -26,7 +26,7 @@
       <p>Při doručení stačí poslat kurýrovi odkaz k otevření boxu.</p>
     </div>
     <div
-      class="after-icon icon-section__content mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-3-desktop">
+      class="after-icon icon-section__content mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop">
       <svg xmlns="http://www.w3.org/2000/svg" width="46.093" height="37.662" viewBox="0 0 46.093 37.662">
         <defs>
           <style>.a {
@@ -42,7 +42,7 @@
         zásilku.</p>
     </div>
     <div
-      class="after-icon--last icon-section__content mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-3-desktop">
+      class="after-icon--last icon-section__content mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop">
       <svg xmlns="http://www.w3.org/2000/svg" width="53.745" height="37.474" viewBox="0 0 53.745 37.474">
         <defs>
           <style>.a {
@@ -61,7 +61,7 @@
         upozornění do aplikace.</p>
     </div>
     <div
-      class="icon-section__content mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-3-desktop">
+      class="icon-section__content mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop">
       <svg xmlns="http://www.w3.org/2000/svg" width="38" height="38" viewBox="0 0 38 38">
         <defs>
           <style>.a {
