--- a/postcube.cz/src/html/firmy/index.njk
+++ b/postcube.cz/src/html/firmy/index.njk
@@ -71,7 +71,7 @@
   <section id="" class="main-info">
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner layout-wrapper">
-        <div class="main-info__bg mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+        <div class="main-info__bg mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
           <img alt="Fotografie PostCube" src="{{ firmyBG | cloudinaryUrl(dpr="auto", width=860) }}">
         </div>
         <div class="main-info__content mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
@@ -166,7 +166,7 @@
             jak vypadá v&nbsp;reálu.</p>
         </div>
 
-        <div class="contact__form mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+        <div class="contact__form mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
           <h3>Dejte nám kontakt a my se ozveme</h3>
           <form>
             <input datatype="name" placeholder="Jméno nebo název firmy" id="company-name" type="text">
@@ -185,7 +185,7 @@
         </div>
 
         <div
-          class="contact__info mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+          class="contact__info mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
           <h3>Nebo se nás rovnou zeptejte</h3>
           <a property="telephone" href="tel:+420739304189" class="info--number">+420 739 304 189</a>
           <a property="email" href="mailto:info@postcube.cz" class="info--email">info@postcube.cz</a>
