--- a/postcube.cz/src/html/index.njk
+++ b/postcube.cz/src/html/index.njk
@@ -86,7 +86,7 @@
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner layout-wrapper">
         <div
-          class="main-info__bg mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+          class="main-info__bg mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
           <picture>
             <source
               media="screen and (max-width: 399px)"
@@ -111,7 +111,7 @@
           </picture>
         </div>
         <div
-          class="main-info__content mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+          class="main-info__content mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
           <h1>Nečekejte na kurýra</h1>
           <p>Je spousta zábavnějších činností než čekání na kurýra. S&nbsp;chytrou
             schránkou PostCube si zásilku vyzvednete, až vy budete&nbsp;chtít!
@@ -255,7 +255,7 @@
   <section class="testimonial mdc-layout-grid">
     <div class="mdc-layout-grid__inner layout-wrapper">
       <div
-        class="testimonial__content mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+        class="testimonial__content mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
         <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
              x="0px" y="0px"
              viewBox="0 0 71 46" style="enable-background:new 0 0 71 46;" xml:space="preserve">
@@ -266,7 +266,7 @@
         <p>Tenhle špatný vtip už nikdy neuslyšíte.</p>
       </div>
       <div
-        class="testimonial__content mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+        class="testimonial__content mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
         <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
              x="0px" y="0px"
              viewBox="0 0 71 46" style="enable-background:new 0 0 71 46;" xml:space="preserve">
