--- a/postcube.cz/src/html/jak-box-funguje/index.njk
+++ b/postcube.cz/src/html/jak-box-funguje/index.njk
@@ -221,14 +221,14 @@
                   zásilky na cestě i&nbsp;historii přepravy.</p>
               </div>
               <div
-                class="btn-android mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+                class="btn-android mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
                 <button class="mdc-button content-btn" type="button">
                   <a href="https://app.postcube.cz/" class="mdc-button__label" target="_blank" rel="noopener">Stáhnout
                     pro Android</a>
                 </button>
               </div>
               <div
-                class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+                class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
                 <button class="mdc-button content-btn" type="button">
                   <a href="#" class="mdc-button__label" target="_blank" rel="noopener">Stáhnout pro iPhone</a>
                 </button>
@@ -337,7 +337,7 @@
         </div>
 
         <div
-          class="contact__form mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+          class="contact__form mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
           <h3>Dejte nám kontakt a my se ozveme</h3>
           <form>
             <input datatype="name" placeholder="Jméno nebo název firmy" id="company-name" type="text">
@@ -356,7 +356,7 @@
         </div>
 
         <div
-          class="contact__info mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+          class="contact__info mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
           <h3>Nebo se nás rovnou zeptejte</h3>
           <a property="telephone" href="tel:+420739304189" class="info--number">+420 739 304 189</a>
           <a property="email" href="mailto:info@postcube.cz" class="info--email">info@postcube.cz</a>
