--- a/postcube.cz/src/html/components/contact.njk
+++ b/postcube.cz/src/html/components/contact.njk
@@ -7,7 +7,7 @@
           jak vypadá v&nbsp;reálu.</p>
       </div>
 
-      <div class="contact__form mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+      <div class="contact__form mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
         <h3>Dejte nám kontakt a my se ozveme</h3>
         <form id="contact-form" action="https://uwjqzwx0d3.execute-api.eu-central-1.amazonaws.com/production/postcube-contact-form" method="POST">
           <label><input name="name" placeholder="Jméno nebo název firmy" id="company-name" type="text"></label>
@@ -41,7 +41,7 @@
       </div>
 
       <div
-        class="contact__info mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+        class="contact__info mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
         <h3>Nebo se nás rovnou zeptejte</h3>
         <a property="telephone" href="tel:+420739304189" class="info--number">+420 739 304 189</a>
         <a property="email" href="mailto:info@postcube.cz" class="info--email">info@postcube.cz</a>
