--- a/postcube.cz/src/html/o-nas/index.njk
+++ b/postcube.cz/src/html/o-nas/index.njk
@@ -220,7 +220,7 @@
         </div>
 
         <div
-          class="contact__form mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+          class="contact__form mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
           <h3>Dejte nám kontakt a my se ozveme</h3>
           <form>
             <input datatype="name" placeholder="Jméno nebo název firmy" id="company-name" type="text">
@@ -239,7 +239,7 @@
         </div>
 
         <div
-          class="contact__info mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+          class="contact__info mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
           <h3>Nebo se nás rovnou zeptejte</h3>
           <a property="telephone" href="tel:+420739304189" class="info--number">+420 739 304 189</a>
           <a property="email" href="mailto:info@postcube.cz" class="info--email">info@postcube.cz</a>
