PostCube / hp faqs

--- a/postcube.cz/src/html/components/faq.njk
+++ b/postcube.cz/src/html/components/faq.njk
@@ -9,41 +9,22 @@
         <input type="checkbox" name="accordion__faq" id="faq2" class="faq--input">
         <label for="faq2" class="faq--label">Jaká je životnost poštovní schránky PostCube?</label>
         <div class="faq--content">
-          <p>PostCube je kovová, voděodolná poštovní schránka budoucnosti navržená
-            tak, aby dlouhodobě odolávala nástrahám počasí. Její životnost je
-            minimálně 6&nbsp;let a závisí na způsobu umístění a používání.
-            Životnost tužkových baterií uvnitř PostCube záleží zejména na způsobu
-            a frekvenci jejího užívání a obvykle se pohybuje v&nbsp;řádu měsíců.
-            Úroveň nabití vidíte v&nbsp;aplikaci, která tuto informaci aktualizuje při
-            každém propojení s&nbsp;boxem.</p>
-          <p>V&nbsp;okamžiku zakoupení PostCube získáte záruku 2&nbsp;roky a můžete se na
-            nás obrátit v&nbsp;případě jakéhokoliv problému. A&nbsp;abyste přesně věděli,
-            co se kolem vaší poštovní schránky během dne děje, a mohli odhalit
-            viníka, kdyby došlo k&nbsp;jejímu poškození, doporučujeme si k&nbsp;ní zakoupit
-            kamerový systém.</p>
+          <p>PostCube je kovová, voděodolná poštovní schránka budoucnosti navržená tak, aby dlouhodobě odolávala nástrahám počasí. Její životnost závisí na způsobu umístění a používání. Životnost tužkových baterií uvnitř PostCube záleží zejména na způsobu a frekvenci jejího užívání a obvykle se pohybuje v řádu měsíců. Úroveň nabití vidíte v aplikaci, která tuto informaci aktualizuje při každém propojení s boxem.</p>
+          <p>V okamžiku zakoupení PostCube získáte záruku 2 roky a můžete se na nás obrátit v případě jakéhokoliv problému. Pro zvýšení bezpečnosti zásilek doporučujeme instalaci kamerového systému, který dodáváme spolu s PostCube.. </p>
         </div>
       </div>
       <div>
         <input type="checkbox" name="accordion__faq" id="faq3" class="faq--input">
         <label for="faq3" class="faq--label">Přes jaké dopravce je možné zasílat?</label>
         <div class="faq--content">
-          <p>Naším cílem je, aby byla PostCube univerzální, a vy si tak mohli vybrat
-            dopravce, který vám vyhovuje nejvíce. V&nbsp;současné době navazujeme
-            spolupráci s&nbsp;předními logistickými společnostmi, jako jsou GLS, Liftago a
-            DHL, a v&nbsp;nejbližší době k&nbsp;nim přibudou také DPD, PPL, Zásilkovna,
-            Slovenská pošta, Česká pošta a&nbsp;další.</p>
+          <p>Naším cílem je, aby byla PostCube univerzální a vy jste si mohli vybrat dopravce, který vám vyhovuje nejvíce. V současné době spolupracujeme s Liftagem a navazujeme spolupráci s dalšími nejpoužívanějšími přepravními společnostmi..</p>
         </div>
       </div>
       <div>
         <input type="checkbox" name="accordion__faq" id="faq4" class="faq--input">
         <label for="faq4" class="faq--label">Mohu si vzhled PostCube nějak přizpůsobit?</label>
         <div class="faq--content">
-          <p>Ano. Jen výběrem velikosti to zdaleka nekončí. Můžete si vybrat
-            z&nbsp;různých základových barev, případně PostCube opatřit polepem fólií
-            a sladit ji tak s&nbsp;barvou a stylem svého domu či plotu. Zcela jiný vzhled
-            dodá vaší poštovní schránce také to, zda bude stát na zemi, nebo na
-            stojanu. Různé varianty PostCube a jejího upevnění si můžete vyzkoušet
-            přes konfigurátor.</p>
+          <p>Ano. Jen výběrem velikosti to zdaleka nekončí. Můžete si vybrat z různých barev, případně PostCube opatřit polepem fólií a sladit ji s barvou a stylem svého domu či plotu. Zcela jiný vzhled dodá vaší poštovní schránce také to, zda bude stát na zemi, nebo na stojanu. Různé varianty PostCube a jejího upevnění si můžete vyzkoušet pomocí konfigurátoru.</p>
         </div>
       </div>
     </div>
@@ -52,47 +33,21 @@
         <input type="checkbox" name="accordion__faq" id="faq5" class="faq--input">
         <label for="faq5" class="faq--label">Kde všude mohu PostCube umístit?</label>
         <div class="faq--content">
-          <p>Kolem domu je celá řada možností, kam poštovní schránku PostCube
-            nainstalovat. Díky podstavci může být samostatně stojící kdekoliv na
-            zahradě, připevněná ke zdi nebo jako součást vašeho plotu. Fantazii se
-            meze nekladou.</p>
+          <p>Kolem domu je celá řada možností, kam poštovní schránku PostCube nainstalovat. Díky podstavci může stát samostatně kdekoliv na zahradě, připevněná ke zdi nebo jako součást vašeho plotu. Fantazii se meze nekladou.</p>
         </div>
       </div>
       <div>
         <input type="checkbox" name="accordion__faq" id="faq6" class="faq--input">
         <label for="faq6" class="faq--label">Je možné aplikaci používat i&nbsp;na počítači?</label>
         <div class="faq--content">
-          <p>Ano. Své zásilky můžete spravovat v&nbsp;jednoduché mobilní aplikaci,
-            která je zdarma ke stažení pro Android i&nbsp;iPhone. Pokud si však
-            s&nbsp;aplikacemi příliš netykáte, můžete celý systém přijímání
-            i&nbsp;odesílání zásilek řídit prostřednictvím webového prohlížeče.</p>
-        </div>
-      </div>
-      <div>
-        <input type="checkbox" name="accordion__faq" id="faq7" class="faq--input">
-        <label for="faq7" class="faq--label">Jaké příslušenství si k&nbsp;PostCube mohu dokoupit?</label>
-        <div class="faq--content">
-          <p>Používání poštovní schránky PostCube je samo o&nbsp;sobě velmi
-            jednoduché. Existují ale vychytávky, s&nbsp;nimiž je to ještě o&nbsp;krapet
-            pohodlnější a bezpečnější. Zakoupit si můžete stojan, abyste se ke
-            schránce nemuseli tolik sklánět, váhu pro zjištění přesné hmotnosti
-            balíku, bezpečnostní kameru nebo externí modul komunikující
-            s&nbsp;elektrickým zámkem na vaší brance nebo u&nbsp;vstupních dveří, který
-            přepravci zpřístupní PostCube, i&nbsp;když máte zamčeno. Veškeré
-            příslušenství najdete v&nbsp;sekci Produkty.</p>
+          <p>Ano. Své zásilky můžete spravovat v jednoduché mobilní aplikaci, která je zdarma ke stažení pro Android (a brzy i iPhone). Pokud si však s aplikacemi příliš netykáte, můžete celý systém přijímání i odesílání zásilek řídit prostřednictvím webového prohlížeče.</p>
         </div>
       </div>
       <div>
         <input type="checkbox" name="accordion__faq" id="faq8" class="faq--input">
         <label for="faq8" class="faq--label">Jak probíhá instalace chytré poštovní schránky?</label>
         <div class="faq--content">
-          <p>Instalaci PostCube může za poplatek provést náš montážní tým a vy se
-            tak nemusíte vůbec o&nbsp;nic starat, nebo se do montáže poštovní schránky
-            můžete pustit na vlastní pěst. V&nbsp;přehledném návodu najdete tipy, jak
-            správně použít spojovací materiál, který je součástí balení, a jaké
-            nářadí k&nbsp;tomu budete potřebovat. Svépomocí tak zvládnete PostCube
-            namontovat na zeď, na plot nebo ji můžete nechat volně stojící na stojanu
-            kdekoliv na zahradě.</p>
+          <p>Instalaci PostCube může za poplatek provést náš montážní tým a vy se nemusíte vůbec o nic starat, nebo se do montáže poštovní schránky můžete pustit na vlastní pěst. V přehledném návodu najdete tipy, jak správně použít spojovací materiál, který je součástí balení, a jaké nářadí budete potřebovat. Svépomocí zvládnete PostCube namontovat na zeď, na plot nebo ji můžete nechat volně stát na stojanu kdekoliv na zahradě..</p>
         </div>
       </div>
     </div>
