--- a/postcube.cz/src/html/index.njk
+++ b/postcube.cz/src/html/index.njk
@@ -167,8 +167,7 @@
           </g>
         </svg>
         <h3>Příjem i&nbsp;odesílání zásilek</h3>
-        <p>PostCube vyzvedává a odesílá zásilky za vás. Při objednávce stačí
-          zadat jen číslo schránky a při odesílání vyplnit údaje
+        <p>PostCube vyzvedává a odesílá zásilky za vás. Pro přijetí stačí poslat kurýrovi odkaz a při odesílání vyplnit údaje
           o&nbsp;příjemci.</p>
       </div>
       <div class="icon-section__content mdc-layout-grid__cell">
@@ -282,7 +281,7 @@
   {% include 'components/video.njk' %}
   {% include 'components/how-it-works.njk' %}
   {% include 'components/get-app.njk' %}
-<div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12"></div>
+  {% include 'components/faq.njk' %}
   {% include 'components/contact.njk' %}
 
 {% endblock %}
