--- a/postcube.cz/src/html/domacnosti/index.njk
+++ b/postcube.cz/src/html/domacnosti/index.njk
@@ -183,6 +183,7 @@
   {% include 'components/get-app.njk' %}
   {% include 'components/domacnosti__choose-pc.njk' %}
   {% include 'components/create-pc.njk' %}
+    {% include 'components/faq.njk' %}
 
 
   <section id="contact" class="contact">
