--- a/postcube.cz/src/html/prepravci/index.njk
+++ b/postcube.cz/src/html/prepravci/index.njk
@@ -37,7 +37,7 @@
       min-height: 48px;
     }
 
-    @media (min-width: 840px) and (max-width: 2039px) {
+    @media (min-width: 840px) {
       .main-info {
         align-self: center;
         margin-top: 8em;
@@ -50,21 +50,6 @@
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
-      }
-    }
-    @media (min-width: 2040px) {
-      .main-info {
-        min-width: 700px;
-        align-self: center;
-        background-image: url({{ deliveryman | cloudinaryUrl(dpr="auto", width=860) }});
-        background-size: 45% auto;
-        background-position: center right;
-        background-repeat: no-repeat;
-        min-height: 600px;
-        margin-top: 8em;
-      }
-      .main-info img {
-        display: none;
       }
     }
     @media (max-width: 839px) {
@@ -105,7 +90,23 @@
             nákupech.</p>
         </div>
         <div class="main-info__bg mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
-          <img alt="Fotka PostCube Kurýra" src="{{ deliveryman | cloudinaryUrl(dpr="auto", width=860) }}">
+          <picture>
+            <source
+              media="screen and (max-width: 839px)"
+              srcset="{{ deliveryman | cloudinaryUrl(dpr="1", width=420) }} 1x,
+                      {{ deliveryman | cloudinaryUrl(dpr="1.5", width=420) }} 1.5x,
+                      {{ deliveryman | cloudinaryUrl(dpr="2", width=420) }} 2x"
+            >
+            <source
+              media="screen and (min-width: 840px)"
+              srcset="{{ deliveryman | cloudinaryUrl(dpr="1", width=860) }} 1x,
+                      {{ deliveryman | cloudinaryUrl(dpr="1.5", width=860) }} 1.5x,
+                      {{ deliveryman | cloudinaryUrl(dpr="2", width=860) }} 2x"
+            >
+            <img
+              alt="Fotka PostCube Kurýra"
+              src="{{ deliveryman | cloudinaryUrl(dpr="auto", width=860) }}">
+          </picture>
         </div>
       </div>
     </div>
@@ -149,8 +150,40 @@
   </section>
   {% include 'components/guarantee.njk' %}
   <div class="guarantee__bg">
-    <img alt="Fotografie dovezení PostCube až k domu" src="{{ prepravciBG01 | cloudinaryUrl(dpr="auto", width=860) }}">
-    <img alt="Fotografie přeprava PostCube" src="{{ prepravciBG02 | cloudinaryUrl(dpr="auto", width=860) }}">
+    <picture>
+      <source
+        media="screen and (max-width: 839px)"
+        srcset="{{ prepravciBG01 | cloudinaryUrl(dpr="1", width=420) }} 1x,
+                {{ prepravciBG01 | cloudinaryUrl(dpr="1.5", width=420) }} 1.5x,
+                {{ prepravciBG01 | cloudinaryUrl(dpr="2", width=420) }} 2x">
+      <source
+        media="screen and (min-width: 840px)"
+        srcset="{{ prepravciBG01 | cloudinaryUrl(dpr="1", width=860) }} 1x,
+                {{ prepravciBG01 | cloudinaryUrl(dpr="1.5", width=860) }} 1.5x,
+                {{ prepravciBG01 | cloudinaryUrl(dpr="2", width=860) }} 2x">
+      <img
+        alt="Fotografie dovezení PostCube až k domu"
+        loading="lazy"
+        src="{{ prepravciBG01 | cloudinaryUrl(dpr="auto", width=860) }}"
+      width="860"
+      height="">
+    </picture>
+    <picture>
+      <source
+        media="screen and (max-width: 839px)"
+        srcset="{{ prepravciBG02 | cloudinaryUrl(dpr="1", width=420) }} 1x,
+                {{ prepravciBG02 | cloudinaryUrl(dpr="1.5", width=420) }} 1.5x,
+                {{ prepravciBG02 | cloudinaryUrl(dpr="2", width=420) }} 2x">
+      <source
+        media="screen and (min-width: 840px)"
+        srcset="{{ prepravciBG02 | cloudinaryUrl(dpr="1", width=860) }} 1x,
+                {{ prepravciBG02 | cloudinaryUrl(dpr="1.5", width=860) }} 1.5x,
+                {{ prepravciBG02 | cloudinaryUrl(dpr="2", width=860) }} 2x">
+      <img
+        alt="Fotografie přeprava PostCube"
+        loading="lazy"
+        src="{{ prepravciBG02 | cloudinaryUrl(dpr="auto", width=860) }}">
+    </picture>
   </div>
 
 
