[postcube.cz] Common contact - for real

--- a/postcube.cz/src/html/layouts/main.njk
+++ b/postcube.cz/src/html/layouts/main.njk
@@ -69,6 +69,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   {% block content %}{% endblock %}
 </main>
 
+{% include 'components/contact.njk' %}
+
 <link rel="stylesheet" href="/assets/css/components/footer.css">
 {% include 'components/footer.njk' %}
 
