--- a/postcube.cz/src/html/layouts/homepage.njk
+++ b/postcube.cz/src/html/layouts/homepage.njk
@@ -69,6 +69,8 @@
   {% block content %}{% endblock %}
 </main>
 
+{% include 'components/contact.njk' %}
+
 <link rel="stylesheet" href="/assets/css/components/footer.css">
 {% include 'components/footer.njk' %}
 
