--- a/postcube.cz/src/html/components/why-pc.njk
+++ b/postcube.cz/src/html/components/why-pc.njk
@@ -27,8 +27,9 @@
   <div class="mdc-layout-grid__inner layout-wrapper">
     <div class="why-postcube__title mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
       <h2>PostCube se o&nbsp;vše postará za vás</h2>
-      <p>Věnujte se důležitějším věcem, než je vyhlížení kurýra. Zásilku
-        si vyzvednete, až se vám to bude&nbsp;hodit.</p>
+      <p>Věnujte se důležitějším věcem, než je čekání na kurýra.
+Zásilku si vyzvednete, až se vám to bude hodit.
+</p>
     </div>
     <div class="icon-section__content mdc-layout-grid__cell">
       <svg width="38" height="64" viewBox="0 0 38 64" fill="none" xmlns="http://www.w3.org/2000/svg">
