--- a/postcube.cz/src/html/firmy/index.njk
+++ b/postcube.cz/src/html/firmy/index.njk
@@ -155,6 +155,7 @@
   {% include 'components/get-app.njk' %}
   {% include 'components/choose-pc.njk' %}
   {% include 'components/create-pc.njk' %}
+    {% include 'components/faq-firmy.njk' %}
 
 
   <section id="contact" class="contact">
