--- a/postcube.cz/src/html/prepravci/index.njk
+++ b/postcube.cz/src/html/prepravci/index.njk
@@ -122,8 +122,7 @@
           <path d="M22.1473 16.7158L19.0315 20.4211L17.8947 19.0316C17.3473 18.3579 16.3789 18.2737 15.7052 18.8211C15.0315 19.3684 14.9473 20.3369 15.4947 21.0105L17.8526 23.8316C18.1473 24.1684 18.5684 24.379 19.0315 24.379C19.4947 24.379 19.9157 24.1684 20.2105 23.8316L24.5052 18.6527C25.0526 17.979 24.9684 17.0105 24.2947 16.4632C23.6631 15.9579 22.6947 16.0421 22.1473 16.7158Z" fill="#1538E5"/>
         </svg>
         <h3>Automatizované</h3>
-        <p>Už žádné nekonečné obvolávání příjemce a čekání na jeho
-          příchod. Kurýr vše zvládne bezkontaktně.</p>
+        <p>Už žádné obvolávání a čekání na příjemce. Kurýr vše zvládne, rychleji, bezpečně a bezkontaktně.</p>
       </div>
       <div class="icon-section__content mdc-layout-grid__cell">
         <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -140,8 +139,7 @@
           <path d="M27 24.4154C27 23.0179 25.8565 21.8744 24.4164 21.8744C23.4847 21.8744 22.6799 22.3403 22.2564 23.1026V23.0179C22.2564 21.6203 21.1129 20.4345 19.6728 20.4345C18.7411 20.4345 17.9363 20.9004 17.5128 21.6203V21.578C17.5128 20.1805 16.3693 18.9947 14.9292 18.9947C13.9975 18.9947 13.1927 19.4605 12.7692 20.1805V11.5835C12.7692 10.9059 12.5151 10.2283 12.0069 9.76242C11.541 9.29657 10.8633 9.00012 10.1856 9.00012C8.78798 9.00012 7.64444 10.1436 7.64444 11.5835V27.4646C7.64444 27.634 7.55973 27.7187 7.43267 27.8034C7.30561 27.8458 7.13619 27.8458 7.05149 27.7187L4.42557 25.1354C3.53614 24.246 2.18083 24.119 1.12199 24.8389C0.529043 25.2624 0.105507 25.8977 0.0208001 26.6176C-0.063907 27.3376 0.105507 28.0998 0.613749 28.6504L7.09384 36.4851C8.91504 38.7296 11.6257 40.0001 14.5057 40.0001H18.5293C20.774 40.0001 22.9341 39.1108 24.5011 37.5015C26.1106 35.8922 27 33.7747 27 31.5302V24.4154Z" fill="#1538E5"/>
         </svg>
         <h3>Jednoduché</h3>
-        <p>Schránka se otevírá přes Bluetooth. Kurýr nepotřebuje znát PIN kód,
-          nosit u&nbsp;sebe klíče nebo instalovat další aplikaci.</p>
+        <p>Schránka se otevírá přes Bluetooth. Kurýr nepotřebuje znát PIN kód ani u sebe nosit klíče.</p>
       </div>
       <div class="action-btn mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <a href="#contact" class="action-btn__label">Domluvit spolupráci</a>
@@ -246,9 +244,7 @@
           <path d="M16.658 23.568H21.49C21.426 21.008 22.578 19.248 24.786 19.248C26.802 19.248 27.986 20.496 27.986 22.384C27.986 23.888 27.058 25.04 25.426 25.808L21.778 27.632C19.698 28.656 16.722 30.96 16.722 34.448L16.754 38H32.754V33.84H21.522C21.522 32.784 22.834 31.952 23.922 31.376L27.474 29.584C31.058 27.792 32.818 25.424 32.818 22.384C32.818 18.128 29.554 15.344 24.786 15.344C19.794 15.344 16.594 18.448 16.658 23.568ZM35.2883 33.392V38H40.1203V33.392H35.2883Z" fill="white"/>
         </svg>
         <h3>Získání informací</h3>
-        <p>Kurýr obdrží do aplikace notifikaci o&nbsp;nové přepravě, kde přehledně
-          vidí adresu, číslo balíku, telefonní kontakt a dodatečné informace,
-          například o&nbsp;umístění&nbsp;boxu.</p>
+        <p>Přes API můžeme přímo komunikovat s vaším systémem. Kurýr tak uvidí adresu, číslo balíku, telefonní kontakt a další aktuální informace přímo ve vaší aplikaci.</p>
       </div>
       <div
         class="after-icon icon-section__content mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop">
@@ -257,9 +253,7 @@
           <path d="M24.0793 38.256C28.5593 38.256 32.4633 35.696 32.4633 31.344C32.4633 28.912 31.0553 26.992 28.8793 26.192C30.4792 25.296 31.5353 23.504 31.5353 21.424C31.5353 18.096 28.2393 15.344 23.8553 15.344C19.7913 15.344 16.0473 17.968 16.0153 22.448H20.5593C20.5913 20.368 21.9353 19.472 23.7593 19.472C25.6153 19.472 26.8953 20.432 26.8953 21.936C26.8953 23.44 25.7433 24.496 23.9833 24.496H21.9353V28.432H24.0793C26.2873 28.432 27.6953 29.488 27.6953 31.216C27.6953 33.008 26.2873 34.096 24.0793 34.096C21.9993 34.096 20.2713 33.04 20.2713 30.928H15.6313C15.6313 35.536 19.4073 38.256 24.0793 38.256ZM35.507 33.392V38H40.339V33.392H35.507Z" fill="white"/>
         </svg>
         <h3>Otevření schránky</h3>
-        <p>Pomocí jednorázového kódu kurýr otevře PostCube a vloží do něj
-          zásilku nebo naopak zásilku vyzvedne. V&nbsp;aplikaci to následně potvrdí
-          jedním klikem.</p>
+        <p>Pomocí jednorázového kódu kurýr otevře PostCube a vloží do něj zásilku nebo naopak zásilku vyzvedne. V aplikaci to následně potvrdí jedním klikem.</p>
       </div>
       <div
         class="icon-section__content mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop">
